tests/error/enum_errors/use_enum_class5.err
Error: Attribute not found (at $FILE:17:15)
   | 
15 | @guppy
16 | def fun() -> None:
17 |     a = MyEnum.method
   |                ^^^^^^ `MyEnum` has no variant or method `method`

Guppy compilation failed due to 1 previous error
